# YP-CinemaAuth

./: .env.example  .env.yandex_oauth_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.default.conf.template  pyproject.toml  setup.cfg
src/: alembic.ini  createsuperuser.py  main.py
src/api/: dependencies.py  router.py
src/api/v1/: __init__.py  router.py  user.py
src/api/v1/auth/: const.py  router.py  schemas.py
src/api/v1/roles/: const.py  router.py  schemas.py
src/api/v1/users/: const.py  router.py  schemas.py
src/core/: database.py  limiter.py  settings.py  settings_oauth.py  tracer.py
src/migrations/: README  env.py
src/migrations/versions/: 2023_11_26_1539-d540c476dc0c_initial_tables.py  2023_11_26_1723-362525c76b4a_init_tables.py  2023_11_29_0145-f6a5d773b957_init_tablesc.py  2023_12_02_2350-ae4bc03d8fc4_add_roles.py  2023_12_03_0018-9071a6221c19_add_id_to_roles.py  2023_12_03_1335-ff199f4c7ed3_comment.py  2023_12_08_2252_create_tables.py  2023_12_21_1233_add_social_account_model.py  8e83d7b6fd21_init_tables.py  c2ced2ad730e_init_tables.py
src/models/: __init__.py  models.py
src/repository/: database.py  exceptions.py  redis.py  schemas.py
src/repository/sql_alchemy/: __init__.py  database.py
src/repository/sql_alchemy/models/: __init__.py  user.py  user_logins.py  user_roles.py
src/schemas/: __init__.py  schemas.py
src/services/: __init__.py  role.py  security.py  user.py  users.py
src/tests/: conftest.py  test_users.py
tests/: conftest.py
tests/test_api/: test_router.py
tests/test_api/test_v1/test_auth/: test_router.py
tests/test_api/test_v1/test_users/: test_router.py
