[tool.poetry]
name = "cinemaauth"
version = "0.1.0"
description = "Сервис авторизации пользователей кинотеатра"
authors = ["Yandex Practicum Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.23.2"
gunicorn = "21.2.0"
fastapi = "0.100.1"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
aioredis = "2.0.1"
orjson = "3.9.9"
SQLAlchemy = "2.0.23"
alembic = "1.12.1"
async-fastapi-jwt-auth = '0.6.1'
typer = "0.9.0"
passlib = "1.7.4"

[tool.poetry.dev-dependencies]
Faker = "14.0.0"
pytest = "7.0.1"
isort = "5.10.1"
mypy = "1.1.1"
flakeheaven = "2.1.2"
